k8s/07-svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: demolabs-backend-svc
  namespace: demolabs
spec:
  selector:
    app: demolabs-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP   # only the frontend nginx proxy talks to this, in-cluster
