k8s/09-svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: demolabs-frontend-svc
  namespace: demolabs
spec:
  selector:
    app: demolabs-frontend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP   # exposed externally via the Ingress below, not directly
