k8s/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demolabs-ingress
  namespace: demolabs
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  rules:
    - host: demolabs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demolabs-frontend-svc
                port:
                  number: 8080
